Dockerfile is added

--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
+	<!--	<finalName>Springboot-CI/CD-GITHUB</finalName>-->
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
