--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,15 @@ jobs:
     - name: Build with Maven
       run: mvn install -DskipTests
 
+    - name: Build & push Docker image
+    - uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: vineshjalla/springboot-ap-icicd-docker
+        tags: v1, latest
+        registry: registry-url.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
