--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>springboot-ap-icicd-docker</finalName>
+		<!--<finalName>springboot-ap-icicd-docker</finalName>-->
 	</build>
 
 </project>
