--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ems?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
+#spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 #AWS database.
 #spring.datasource.url=jdbc:mysql://angularwithspringboot.c8urqb9fys8c.us-east-2.rds.amazonaws.com:3306/angularwithspringboot?useSSL=false
