--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 # jdbc url syntax: jdbc:mysql or mongodb etc://hostname:portnumber/databasename?useSSL=false
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ems?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/ems?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
 #spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 #AWS database.
@@ -15,10 +15,15 @@ spring.datasource.password=root
 #spring.datasource.password=jvinesh845
 #Hibernate properties
 #below line generates mysql quries. MySQL5InnoDBDialect is a dialect used to inform Spring Boot of the database being used. Based on this, Spring Boot will generate SQL queries for that particular database.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # below line one create tables in database automtically. we can also use create,create-drop in place of update.
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:mysql://integerationwithdatabsesusingaws.c8urqb9fys8c.us-east-2.rds.amazonaws.com:3306/student?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=jvinesh845
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 server.port=5000
 
 
